Practice session: Exersice 1 and 2 done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "iostream": "cpp",
         "stdbool.h": "c",
         "stdio.h": "c",
-        "limits.h": "c"
+        "limits.h": "c",
+        "iosfwd": "cpp"
     }
 }
