Tried chopping wood but getting run time error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,14 @@
         "stdio.h": "c",
         "limits.h": "c",
         "iosfwd": "cpp",
-        "xiosbase": "cpp"
+        "xiosbase": "cpp",
+        "map": "cpp",
+        "unordered_map": "cpp",
+        "utility": "cpp",
+        "list": "cpp",
+        "vector": "cpp",
+        "xhash": "cpp",
+        "xstring": "cpp",
+        "xtree": "cpp"
     }
 }
