Added some files to TDDD95 but will be removes next push

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "vector": "cpp",
         "xhash": "cpp",
         "xstring": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "ostream": "cpp",
+        "algorithm": "cpp"
     }
 }
